--- a/tech/learn/编程/python/基础知识点/类.md
+++ b/tech/learn/编程/python/基础知识点/类.md
@@ -16,7 +16,6 @@ class SingBird(Bird):
     - __getitem__(self, key)
     - __setitem__(self, key, value)
     - __delitem__(self, key)
-    
     ```python
      class MyCollector:
          def __init__(self):
@@ -36,4 +35,4 @@ class SingBird(Bird):
      c[2] = 10
      assert c[2] + c[4] == 14
     ```
-        + 注意 非法类型的索引请抛出 TypeError 超出索引范围请抛出 IndexError
+        注意 非法类型的索引请抛出 TypeError 超出索引范围请抛出 IndexError
