--- a/tech/learn/数据库/elasticsearch/数据备份和恢复.md
+++ b/tech/learn/数据库/elasticsearch/数据备份和恢复.md
@@ -35,3 +35,125 @@ GET /_snapshot/my_backup
   }
 }
 ```
+其他获取快照仓库的方式
+```java
+GET /_snapshot/repo*,*backup* //通配符的使用，多个仓库之间使用“,”隔开
+GET /_snapshot //获取所有的快照仓库信息
+GET /_snapshot/_all  //获取所有的快照仓库信息
+```
+
+### 共享文件系统仓库
+("type": "fs") 就是使用共享文件系统存储快照，确保将共享文件系统挂载到集群所有的master和data节点上，并且必须在master和data节点的path.repo里边进行
+注册
+
+elasticsearch.yml
+```
+path.repo: ["/mount/backups", "/mount/longterm_backups"]
+```
+
+待所有的节点启动好后，使用下面的命令就可以创建快照仓库
+```
+PUT /_snapshot/my_fs_backup
+{
+    "type": "fs",
+    "settings": {
+        "location": "/mount/backups/my_fs_backup_location",
+        "compress": true
+    }
+}
+```
+也可以使用相对路径，相对于path.repo的第一个路径配置
+
+配置参数settings解释
+| 参数   |      解释      | 例子|
+|----------|:-------------:|:----:|
+| location |  快照存储目录 | /data/es |
+| compress | 元数据是否压缩（数据文件不能压缩| true |
+| chunk_size | 大文件可以分块存储 | 10m |
+| max_restore_bytes_per_sec | 每个节点restore门限，默认每秒40mb| 50mb |
+| max_snapshot_bytes_per_sec | 同上 | 40mb |
+| readonly | 是否只读 | false |
+
+### Read-Only URL 仓库
+("type": "url")可以替代只读文件系统仓库
+
+### Source only 仓库
+快照仅占50%左右的磁盘空间，它只包含字段和原数据，它不包含index和doc values,当数据restore后是不能搜索的，必须要reindex才可以正常使用
+> 只有 _source 字段启用的index才可以用这种方式
+
+```
+PUT _snapshot/my_src_only_repository
+{
+  "type": "source",
+  "settings": {
+    "delegate_type": "fs",
+    "location": "my_backup_location"
+  }
+}
+```
+
+### 快照仓库的验证
+当快照仓库创建好后，会自动立即在所有的master和data节点上进行验证，确保功能可用，可以禁用这个行为
+
+在创建的时候指定verify=false
+```
+PUT /_snapshot/my_unverified_backup?verify=false
+{
+  "type": "fs",
+  "settings": {
+    "location": "my_unverified_backup_location"
+  }
+}
+```
+
+也可以手动执行验证
+```
+POST /_snapshot/my_unverified_backup/_verify
+```
+
+### 快照
+同一个集群可以包含多个快照，快照通过名称唯一标识自己，通过下面的命令创建快照
+```
+PUT /_snapshot/my_backup/snapshot_1?wait_for_completion=true
+```
+wait_for_completion 参数控制请求是否在初始化完成后就立即返回，在快照初始化的时候，它会加载所有之前的快照信息到内存，所以当快照仓库比较大的时候
+初始化过程可能会花很长时间
+
+默认所有open和started的index都会被创建快照，可以通过额外的参数来控制这种行为
+```
+PUT /_snapshot/my_backup/snapshot_2?wait_for_completion=true
+{
+  "indices": "index_1,index_2",
+  "ignore_unavailable": true,
+  "include_global_state": false
+}
+```
+ignore_unavailable 是否跳过那些不可用的index，不配置这个参数的话，遇到不可用index，整个请求会失败
+include_global_state 是否将集群的全局状态作为纳入快照
+
+可以使用date语法自动生成快照的名称,注意encode url关键字
+```
+PUT /_snapshot/my_backup/<snapshot-{now/d}>
+```
+就会生成如 “snapshot-2018.05.11” 的快照名称
+
+快照是增量式的，es会分析快照仓库的文件，仅对那些修改过或者新增的数据进行快照，整个快照的生成的进程是非阻塞的，所有查询等其他操作是可以同时进行
+
+快照还可以包含集群元数据，比如templates和cluster settings
+
+一个集群一次只能执行一个快照进程，正在做snpshot的shard是不能移动到其他节点上，这个行为会影响到es的rebanlance和allocation filter过程
+
+当快照创建好后，可以通过下面的命令进行查看
+```
+GET /_snapshot/my_backup/snapshot_1
+```
+会返回关于快照的基本信息，包括执行快照的开始和结束时间，创建快照的es版本，快照包含的index列表，以及在执行快照期间发生的错误信息
+
+快照的state取值和意义
+|取值|意义|
+|:--|:--|
+|IN_PROGRESS| 还在运行中 |
+| SUCCESS | 快照生成成功，所有的shards都保存成功 |
+| FAILED | 失败，并且没有任何数据 |
+| PARTIAL | 集群的全局状态保存成功，但是至少有一个shard的数据没有保存成功 ， failure包含失败的原因 |
+| INCOMPATIBLE | 版本不兼容当前版本 |
