--- a/work/lensyn/江门项目/安装手册.md
+++ b/work/lensyn/江门项目/安装手册.md
@@ -1,7 +1,7 @@
 ## 江门低压配电网可视化
 + es docker启动
 ```bash
-docker run -d --name elasticsearch --network host -v /home/root/data/elasticsearch:/var/lib/elasticsearch -v /home/root/logs/elasticsearch:/var/log/elasticsearch -e "discovery.type=single-node" elasticsearch:5
+docker run -d --name elasticsearch-dev --network host -v /home/root/data/elasticsearch:/var/lib/elasticsearch -v /home/root/logs/elasticsearch:/var/log/elasticsearch -e "discovery.type=single-node" -e "path.repo=['/var/lib/elasticsearch/snapshot']" elasticsearch:5
 ```
 
 + 创建snapshot目录
@@ -22,3 +22,5 @@ PUT /_snapshot/lo_users
 ```yml
 path.repo: ["/var/lib/elasticsearch/snapshot"]
 ```
+1 使用docker exec -it imagename sh命令进入交互式界面
+2 然后编辑/usr/share/elasticsearch/config/elasticsearch.yml
