--- a/work/lensyn/江门项目/安装手册.md
+++ b/work/lensyn/江门项目/安装手册.md
@@ -22,5 +22,6 @@ PUT /_snapshot/lo_users
 ```yml
 path.repo: ["/var/lib/elasticsearch/snapshot"]
 ```
-1 使用docker exec -it imagename sh命令进入交互式界面
-2 然后编辑/usr/share/elasticsearch/config/elasticsearch.yml
++ 1 使用docker exec -it imagename sh命令进入交互式界面
++ 2 然后编辑/usr/share/elasticsearch/config/elasticsearch.yml
++ 3 重启 docker restart elasticsearch
