--- a/work/lensyn/江门项目/安装手册.md
+++ b/work/lensyn/江门项目/安装手册.md
@@ -25,3 +25,27 @@ path.repo: ["/var/lib/elasticsearch/snapshot"]
 + 1 使用docker exec -it imagename sh命令进入交互式界面
 + 2 然后编辑/usr/share/elasticsearch/config/elasticsearch.yml
 + 3 重启 docker restart elasticsearch
+
+
+### department tree数据快照
++ 创建仓库
+```java
+PUT http://172.16.96.136:9200/_snapshot/department
+{
+  "type": "fs",
+  "settings": {
+    "location": "/var/lib/elasticsearch/snapshot",
+    "compress": true
+  }
+}
+```
+
++ 创建快照
+```java
+PUT http://172.16.96.136:9200/_snapshot/department/20190226?wait_for_completion=true
+{
+  "indices": "department",
+  "ignore_unavailable": true,
+  "include_global_state": false
+}
+```
