--- a/tech/learn/数据库/elasticsearch/深度分页.md
+++ b/tech/learn/数据库/elasticsearch/深度分页.md
@@ -15,3 +15,58 @@ CPU、内存和IO消耗容易理解，网络带宽问题稍难理解一点。在
 在另一方面，我们意识到，这种深度分页的请求并不合理，因为我们是很少人为的看很后面的请求的，在很多的业务场景中，都直接限制分页，比如只能看前100页。
 
 不过，这种深度分页确实存在，比如，被爬虫了，这个时候，直接干掉深度分页就好；又或者，业务上有遍历数据的需要，比如，有1千万粉丝的微信大V，要给所有粉丝群发消息，或者给某省粉丝群发，这时候就需要取得所有符合条件的粉丝，而最容易想到的就是利用 from + size 来实现，不过，这个是不现实的，这时，可以采用 Elasticsearch 提供的 scroll 方式来实现遍历。
+
+#### 利用 scroll 遍历数据
+可以把 scroll 理解为关系型数据库里的 cursor，因此，scroll 并不适合用来做实时搜索，而更适用于后台批处理任务，比如群发。
+
+可以把 scroll 分为初始化和遍历两步，初始化时将所有符合搜索条件的搜索结果缓存起来，可以想象成快照，在遍历时，从这个快照里取数据，也就是说，在初始化后对索引插入、删除、更新数据都不会影响遍历结果。
+
+#### 使用介绍
++ 初始化
+```java
+POST http://172.16.96.136:9200/deparment/doc/_search?scroll=1m
+{
+  "query": {
+  	"wildcard": {
+  		"name": "*集中器*"
+  	}
+  }
+}
+```
+scroll 代表缓存查询结果，值指定缓存数据量的时间
+
+返回结果
+```java
+{
+    "_scroll_id": "DnF1ZXJ5VGhlbkZldGNoAwAAAAAAAAGuFk9nS01sSUpIUlV5bC1QaFR6ckRucncAAAAAAAABrxZPZ0tNbElKSFJVeWwtUGhUenJEbnJ3AAAAAAAAAbAWT2dLTWxJSkhSVXlsLVBoVHpyRG5ydw=="
+}
+```
+返回一个scrollid下次查询使用
+
++ 第二次请求
+```java
+POST /_search?scroll=1m
+{
+    "scroll_id":"XXXXXXXXXXXXXXXXXXXXXXX I am scroll id XXXXXXXXXXXXXXX"
+}
+```
+不需要带index和type，直接输入scroll_id
+
+### scroll-scan进一步提高查询性能，适用于不关注数据顺序的业务场景
+
+初始化
+```java
+POST http://172.16.96.136:9200/deparment/doc/_search?scroll=1m&search_type=scan&size=50
+{
+  "query": {
+  	"wildcard": {
+  		"name": "*集中器*"
+  	}
+  }
+}
+```
+
+### scroll 和 scroll-scan的不同点
++ Scroll-Scan 结果没有排序，按 index 顺序返回，没有排序，可以提高取数据性能。
++ 初始化时只返回 _scroll_id，没有具体的 hits 结果。
++ size 控制的是每个分片的返回的数据量而不是整个请求返回的数据量。
