--- a/work/lensyn/江门项目/安装手册.md
+++ b/work/lensyn/江门项目/安装手册.md
@@ -49,3 +49,26 @@ PUT http://172.16.96.136:9200/_snapshot/department/20190226?wait_for_completion=
   "include_global_state": false
 }
 ```
+
+### 低压用户数据快照
++ 创建仓库
+```java
+PUT http://172.16.96.136:9200/_snapshot/lo_users
+{
+  "type": "fs",
+  "settings": {
+    "location": "/var/lib/elasticsearch/snapshot",
+    "compress": true
+  }
+}
+```
+
++ 创建快照
+```java
+PUT http://172.16.96.136:9200/_snapshot/lo_users/20190227?wait_for_completion=true
+{
+  "indices": "lo_users",
+  "ignore_unavailable": true,
+  "include_global_state": false
+}
+```
