--- a/work/lensyn/江门项目/安装手册.md
+++ b/work/lensyn/江门项目/安装手册.md
@@ -77,6 +77,9 @@ PUT http://172.16.96.136:9200/_snapshot/lo_users/20190227?wait_for_completion=tr
 ```
 pip install mysql-connector-python
 pip install flask-restful 
+pip install redis
+pip install elasticsearch
+pip install pytesseract
 ```
 [flask-restful地址](https://flask-restful.readthedocs.io/en/latest/installation.html)
 [mysql地址](https://dev.mysql.com/doc/connector-python/en/connector-python-installation-binary.html)
