--- a/work/lensyn/江门项目/安装手册.md
+++ b/work/lensyn/江门项目/安装手册.md
@@ -73,6 +73,18 @@ PUT http://172.16.96.136:9200/_snapshot/lo_users/20190227?wait_for_completion=tr
 }
 ```
 
++ 数据恢复
+```java
+POST http://192.168.127.137:9200/_snapshot/lo_users/20190227/_restore
+{
+  "indices": "lo_users",
+  "ignore_unavailable": true,
+  "include_global_state": true,
+  "rename_pattern": "index_(.+)",
+  "rename_replacement": "restored_index_$1"
+}
+```
+
 ### python爬虫项目需要安装的包
 ```
 pip install mysql-connector-python
