--- a/tech/learn/数据库/elasticsearch/数据备份和恢复.md
+++ b/tech/learn/数据库/elasticsearch/数据备份和恢复.md
@@ -1,11 +1,28 @@
-## 数据备份和恢复
+<!-- TOC -->
+
+- [0.1. 数据备份和恢复](#01-数据备份和恢复)
+    - [0.1.1. 版本兼容性](#011-版本兼容性)
+    - [0.1.2. snpshot仓库](#012-snpshot仓库)
+    - [0.1.3. 共享文件系统仓库](#013-共享文件系统仓库)
+    - [0.1.4. Read-Only URL 仓库](#014-read-only-url-仓库)
+    - [0.1.5. Source only 仓库](#015-source-only-仓库)
+    - [0.1.6. 快照仓库的验证](#016-快照仓库的验证)
+    - [0.1.7. 快照](#017-快照)
+    - [0.1.8. 恢复](#018-恢复)
+    - [0.1.9. 部分恢复](#019-部分恢复)
+    - [0.1.10. 修改index配置](#0110-修改index配置)
+    - [0.1.11. 恢复到其他库](#0111-恢复到其他库)
+    - [0.1.12. 快照状态](#0112-快照状态)
+
+<!-- /TOC -->
+## 0.1. 数据备份和恢复
 快照备份是增量式的，它不会将原始数据拷贝一份另作保存，并且可以热备份。这种备份方式是很高效的。快照可以通过restore api恢复到正在运行的数据库中。
 > es不支持使用拷贝目录的方式进行备份，es在运行的时候会不断的修改目录里的内容，es仅支持snpshot和restore的方式进行备份和恢复
 
-### 版本兼容性
+### 0.1.1. 版本兼容性
 那个版本的snpshot只能恢复到高于备份版本的数据库中，所以因为要升级数据库而备份数据的话，要考虑数据版本的兼容性
 
-### snpshot仓库
+### 0.1.2. snpshot仓库
 在执行快照之前需要准备注册快照仓库，建议每个主要版本都创建一个单独的快照仓库。如果同一个快照仓库被多个集群使用，确保仅有一个集群能够对该仓库进行写操作
 其他的集群只有读权限
 > 因为不同的集群版本snpshot的格式可能不一样
@@ -42,7 +59,7 @@ GET /_snapshot //获取所有的快照仓库信息
 GET /_snapshot/_all  //获取所有的快照仓库信息
 ```
 
-### 共享文件系统仓库
+### 0.1.3. 共享文件系统仓库
 ("type": "fs") 就是使用共享文件系统存储快照，确保将共享文件系统挂载到集群所有的master和data节点上，并且必须在master和data节点的path.repo里边进行
 注册
 
@@ -75,10 +92,10 @@ PUT /_snapshot/my_fs_backup
 | max_snapshot_bytes_per_sec | 同上 | 40mb |
 | readonly | 是否只读 | false |
 
-### Read-Only URL 仓库
+### 0.1.4. Read-Only URL 仓库
 ("type": "url")可以替代只读文件系统仓库
 
-### Source only 仓库
+### 0.1.5. Source only 仓库
 快照仅占50%左右的磁盘空间，它只包含字段和原数据，它不包含index和doc values,当数据restore后是不能搜索的，必须要reindex才可以正常使用
 > 只有 _source 字段启用的index才可以用这种方式
 
@@ -93,7 +110,7 @@ PUT _snapshot/my_src_only_repository
 }
 ```
 
-### 快照仓库的验证
+### 0.1.6. 快照仓库的验证
 当快照仓库创建好后，会自动立即在所有的master和data节点上进行验证，确保功能可用，可以禁用这个行为
 
 在创建的时候指定verify=false
@@ -112,7 +129,7 @@ PUT /_snapshot/my_unverified_backup?verify=false
 POST /_snapshot/my_unverified_backup/_verify
 ```
 
-### 快照
+### 0.1.7. 快照
 同一个集群可以包含多个快照，快照通过名称唯一标识自己，通过下面的命令创建快照
 ```java
 PUT /_snapshot/my_backup/snapshot_1?wait_for_completion=true
@@ -179,7 +196,7 @@ es会删除所有跟此快照相关的文件，同时这些文件和其他的快
 DELETE /_snapshot/my_backup
 ```
 
-### 恢复
+### 0.1.8. 恢复
 ```java
 POST /_snapshot/my_backup/snapshot_1/_restore
 ```
@@ -200,11 +217,11 @@ rename_pattern和rename_replacement重命名索引
 
 restore操作可以热运行，已经存在的index只有当它关闭的时候才可以，并且快照的index和已经存在的index包含同样的shard
 
-### 部分恢复
+### 0.1.9. 部分恢复
 默认如果index的某些shard失败后悔让整个请求失败，数据恢复不成功，也可以设置参数partial为true
 
 
-### 修改index配置
+### 0.1.10. 修改index配置
 在恢复的时候可以修改index的配置
 ```json
 POST /_snapshot/my_backup/snapshot_1/_restore
@@ -219,10 +236,10 @@ POST /_snapshot/my_backup/snapshot_1/_restore
 }
 ```
 
-### 恢复到其他库
+### 0.1.11. 恢复到其他库
 将快照仓库注册到其他集群里执行恢复操作就可以了
 
-### 快照状态
+### 0.1.12. 快照状态
 ```
 GET /_snapshot/_status //当前运行的快照状态
 GET /_snapshot/my_backup/_status //指定快照仓库下的所有正在运行的快照状态
