修改加入配变关系

--- a/业务知识/电力系统分析/电力系统基本概念.md
+++ b/业务知识/电力系统分析/电力系统基本概念.md
@@ -43,3 +43,9 @@ date: 2019-04-22
 
 ![路边电线杆](./imgs/01.jpg)  
 *图：路边电线杆上就是配变*
+
++ 变电站，配变和台区
+> 变电站属于输电网部分，一般都是35kv以上。配变是用户侧，都是低压部分。台区仅是营销管理层面的名词，三者的关系大致可以这样表达。
+
+![关系](./imgs/04.png)  
+*变电站，配变和台区关系*
