区块链的只是

--- a/tech/learn/机器学习/深度学习/概述.md
+++ b/tech/learn/机器学习/深度学习/概述.md
@@ -1,7 +1,9 @@
 ## 概述
 + 深度学习是深度学习的子领域
-> 深度学习的算法受灵感于人类大脑的思考方式。因此，深度机器学习能够有学习信息和使用信息的能力  
+    > 深度学习的算法受灵感于人类大脑的思考方式。因此，深度机器学习能够有学习信息和使用信息的能力  
 
 + 处理深度学习的网络叫做“人工神经网络”
 
 + 深度学习的处理仍然处于研究阶段
+
+首先，我要确定机器学习存在的实际意义。我们的行为（购买行为，动向行为，情感行为）都不是随机的，都是有意识的。所以，这些行为是可以分析的。所以，大量的数据存在确定的关系，我们需要机器学习将这些关系找出来，更好的为我们服务。
