--- a/tech/learn/机器学习/深度学习/概述.md
+++ b/tech/learn/机器学习/深度学习/概述.md
@@ -7,3 +7,5 @@
 + 深度学习的处理仍然处于研究阶段
 
 首先，我要确定机器学习存在的实际意义。我们的行为（购买行为，动向行为，情感行为）都不是随机的，都是有意识的。所以，这些行为是可以分析的。所以，大量的数据存在确定的关系，我们需要机器学习将这些关系找出来，更好的为我们服务。
+
+我们并不承诺构造一个万能公式，去100%的预测我们想要的东西，我们仅是构建一个好的，并且有用的近似解决办法。
