--- a/tech/learn/编程/python/基础知识点/语言点.md
+++ b/tech/learn/编程/python/基础知识点/语言点.md
@@ -16,6 +16,7 @@
         - [1.2.6. 迭代器打包成元组](#126-迭代器打包成元组)
         - [1.2.7. 合并两序列成字典](#127-合并两序列成字典)
     - [1.3. 集合](#13-集合)
+        - [集合的运算](#集合的运算)
 
 <!-- /TOC -->
 
@@ -120,3 +121,45 @@ dict(zip(keys, values))
 ```
 
 ## 1.3. 集合
++ remove方法如果元素不存在会抛出异常，discard方法不会
++ 集合中的元素不可重复。
++ 集合中的元素不保证顺序
++ 常用方法 add, update, remove, discard，clear
++ 可以使用in来检查元素是否存在 比如 4 in set(range(10))
++ 空集合的表示方法是 “set()” 而不是 “{}”，后者代表空字典
+
+```python
+set(接收序列) # 序列有字符串序列，数组，列表，字典keys，元组
+```
+
+### 集合的运算
++ union 求并集
+```python
+{1,2,4}.union({3,6,8})
+#或者
+{1,2,3} | {4,5,6}
+```
+
++ 求交集
+```python
+{1,2,4}.intersection({3,6,8})
+#或者
+{1,2,3} & {4,5,6}
+```
+
++ 求差集
+```python
+{1,2,4,3}.difference({3,6,8})
+#或者
+{1,2,3} - {3,4,5,6}
+```
+
++ 求对称差异 symmetric_difference
+> 就是即不在A里，也不在B里
+
+```python
+{1,2,4,3}.symmetric_difference({3,6,8})
+#或者
+{1,2,3} ^ {3,4,5,6}
+```
+
