--- a/tech/learn/中间件/kafka/1-集群安装.md
+++ b/tech/learn/中间件/kafka/1-集群安装.md
@@ -181,7 +181,7 @@ docker run --hostname zoo3 --network zk -P --ip 172.19.1.3 -v /data/zk/data/3:/d
 + 6 删除
 ```sh
 docker stop zk1 || docker rm zk1 || docker rmi zk1
-
+sudo docker run --name zk --network host  -v /data/zk/data/1:/data -d -P zk:latest
 docker run --hostname zoo1 --network zk -P -it --ip 172.19.1.1 -v /data/zk/data/1:/data --name zk1 zk1:latest /bin/bash
 ```
 
