提交好多东西

--- a/tech/learn/数据库/elasticsearch/石杉课程笔记/01.md
+++ b/tech/learn/数据库/elasticsearch/石杉课程笔记/01.md
@@ -18,3 +18,42 @@ get /_nodes/indices/fielddata?level=indices&fields=*
 如果一次query load的fielddata超出总内存，会导致内存溢出
 
 indices.breaker.fielddata.limit:
+
+
+# 高级进阶
+## 基于term vector深入探查数据的情况
+1. term vector介绍  
+```text
+获取document中某个field内各个term的统计信息  
+term信息包括  
+    + 该field的每个term的出现平吕  
+    + term出现位置  
+    + 开始和结束偏移位置  
+    + term的payloads  
+term统计信息
+    + term frequency 一个term在所有的document出现的频率
+    + document frequency 有多少document包含这个term
+field统计信息
+    + document count 有多少个document包含这个field
+    + sum of document frequency 一个field中所有term df之和
+    + sum of total term frequency 一个field中的所有term的tf之和
+```
+
+## highlight高亮显示
+```text
+GET /my_index/my_type/_search
+{
+    "query": {
+        "match": { "myfield": "elas"}
+    },
+    "highlight": {
+        "fields": {
+            "my_field": {}
+        }
+    }
+}
+```
++ plain highlight, lucene highlight 默认
++ post highlight , index_options=offsets
+可以配置高亮的tag, fragment_size和显示几个片段
+post highlight是的性能更高一点
