commit many things

--- a/tech/learn/机器学习/机器学习基础/01-数学基础.md
+++ b/tech/learn/机器学习/机器学习基础/01-数学基础.md
@@ -35,3 +35,9 @@ B->C: Says 我很好，你呢？
 Note right of B: 我才不是人呢。
 C->>A: Says 你怎么样啊，最佳？
 ```
+
+```python {cmd=true matplotlib=true}
+import matplotlib.pyplot as plt
+plt.plot([1,2,3, 4])
+plt.show() # show figure
+```
