apollo部署注意点

--- a/tech/learn/中间件/apollo/部署.md
+++ b/tech/learn/中间件/apollo/部署.md
@@ -7,3 +7,8 @@ apollo部署
 + 创建ApolloConfigDB
 运行SQL，地址[apollo数据库SQL](https://github.com/ctripcorp/apollo/blob/master/scripts/db/migration/configdb/V1.0.0__initialization.sql)
 
+## 注意点
++ 注意修改 ApolloConfigDB里的ServerConfig里的eureka配置，配置的地址是 config server的地址
+
++ jar编译的时候把test全部删掉，然后运行 scripts下的build.sh
++ 如果修改了源代码，就自己手动编译
