k8s-容器发展史和docker内部原理

--- a/tech/learn/数据库/mysql/索引.md
+++ b/tech/learn/数据库/mysql/索引.md
@@ -123,5 +123,5 @@ MDL锁，只有事务提交后才释放
 阻塞，整个数据库看起来是不可用了。
 
 ### 3.2.3. 如何安全的给小表加字段
-+ 首选查看`infomation_schema.innodb_trx`表有没有正在执行的长事务。如果有先暂停等待事务执行完毕，或者kill掉这个事务。
-+ 使用`alter table table_name WAIT N add colum ...`的方法，尝试等待一段时间，如果没有获取到MDL锁，就主动退出，不阻塞后边的语句
++ 首选查看 `infomation_schema.innodb_trx` 表有没有正在执行的长事务。如果有先暂停等待事务执行完毕，或者kill掉这个事务。
++ 使用 `alter table table_name WAIT N add colum ...` 的方法，尝试等待一段时间，如果没有获取到MDL锁，就主动退出，不阻塞后边的语句。
