--- a/tech/learn/devops/kubernetes/笔记.md
+++ b/tech/learn/devops/kubernetes/笔记.md
@@ -171,6 +171,18 @@ dig -t A service-name.default.svc.cluster.local @dns地址
 wget -O - -q http://nginx-service
 ```
 
+## 加速docker配置
+
+```bash
+[root@master tomcat]# cat /etc/docker/daemon.json
+{
+  "registry-mirrors": [
+    "https://dockerhub.azk8s.cn",
+    "https://hub-mirror.c.163.com"
+  ]
+}
+```
+
 ## kubectl scale
 
 ```bash
