修改图片目录

--- a/tech/learn/devops/kubernetes/笔记.md
+++ b/tech/learn/devops/kubernetes/笔记.md
@@ -767,11 +767,11 @@ kube-proxy监控着etcd配置变动 `watch机制`
 
 * iptables 
 
-  ![](I:\平头哥精神\notebook\tech\learn\devops\kubernetes\笔记.assets\image-20200312144355120.png)
+  ![](笔记.assets\image-20200312144355120.png)
 
 * ipvs 在内核态直接调度，要额外添加一些属性，否则会自动降级到iptables. 在`/etc/sysconfig/kubelete` 里 `KUBELETE_EXTRA_ARGS="--fail-swap-on=false" KUBE_PROXY_MODE=ipvs` 还要装ipvs模块。具体再搜索。
 
-  ![image-20200312144425323](I:\平头哥精神\notebook\tech\learn\devops\kubernetes\笔记.assets\image-20200312144425323.png)
+  ![image-20200312144425323](笔记.assets\image-20200312144425323.png)
 
   kube-proxy watch到etcd的变化后，转换成ipvs规则，ipvs在内核态直接完成调度。
 
