--- a/tech/learn/编程/python/基础知识点/语言点.md
+++ b/tech/learn/编程/python/基础知识点/语言点.md
@@ -296,3 +296,82 @@ def random_test():
     print(int(v, 16))
 ```
 
+## 上下文管理 `with`
+
+### 方法1 ：实现类接口方式
+
+```python
+class MyDoc():
+    def __init__(self, name, age):
+        self.__dict__.update(locals())
+
+    def say(self):
+        print("="*10)
+        print("name=%s, age=%d"%(self.name, self.age))
+        print("=" * 10)
+        raise Exception("error")
+
+    def __enter__(self):
+        print("ENTER")
+        return self
+
+    def __exit__(self, exc_type, exc_val, exc_tb):
+        print("EXIT")
+        if exc_tb is not None:
+            print(exc_tb)
+
+with MyDoc() as d:
+    d.say()
+```
+
+### 方法2：注解管理
+
+```python
+from contextlib import contextmanager
+
+@contextmanager
+def cup():
+    print("打开数据库连接")
+    yield "使用数据库连接"
+    print("关闭数据库连接")
+
+with cup() as c:
+    print(c)
+    print("再做其他事情")
+```
+
+## 缓存
+
+```python
+from functools import lru_cache
+
+@lru_cache(maxsize=1)
+def cache_data():
+    print("执行")
+    return range(10)
+```
+
+## 协程
+
+```python
+def hello():
+    while True:
+        world = (yield)
+        print(world)
+
+h = hello()
+next(h)
+h.send("你好")
+h.send("我不好")
+```
+
+## 命名元组
+
+```python
+import  collections
+
+Apple = collections.namedtuple("Apple", "color age")
+a1 = Apple("red", "12")
+print(a1.age)
+```
+
